# WeatherProxy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: dependencies.py  main.py
app/api/: __init__.py  handlers.py  middleware.py  weather.py
app/core/: __init__.py  config.py  errors.py  logging.py
app/integrations/: __init__.py  open_meteo.py  open_meteo_provider.py
app/repositories/: __init__.py  cache.py
app/services/: __init__.py  weather_service.py
tests/: conftest.py  test_health.py
tests/api/: test_handlers.py  test_middleware.py  test_weather_api.py
tests/core/: test_config.py  test_errors.py  test_logging.py
tests/integrations/: test_open_meteo.py
tests/repositories/: test_cache.py
tests/services/: test_weather_service.py
