[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-proxy"
version = "0.1.0"
description = "Production-ready REST API that proxies Open-Meteo weather provider"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.2.0",
    "ruff>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
